# ganttouchthis-py

./: .pre-commit-config.yaml  LICENSE  README.md  ganttouchthis  install_as_cli.sh  pyproject.toml
examples/: basic.py  setup.py  test.py  trial_run.py
scratch/: notion_api.py
src/ganttouchthis/: __init__.py
src/ganttouchthis/cli/: interactive.py  interactive_gantt.py  main.py
src/ganttouchthis/structures/: backlog.py  day.py  gantt.py  project.py  task.py  temporal.py
src/ganttouchthis/utils/: date.py  db.py  dotdict.py  enums.py  input.py  json.py  repr.py  spacer.py  task_segment_expansion.py  temporal.py
test/: test_adjustment.py  test_backlog.py  test_date.py  test_db_reading.py  test_db_writing.py  test_search_and_editing.py  test_task_segment_expansion.py
test/data/nonempty_db/: backlog.json
test/data/read_nonempty_db/: backlog.json  projects.json  tasks.json
test/data/write_nonempty_db/: backlog.json  days.json  projects.json  tasks.json
test/utils/: db.py
